# Rust-Rocket-Cors-Server

./: Cargo.toml  README.md
src/: Rocket.toml  main.rs
