[package]
name = "cls10"
version = "0.1.0"
authors = ["shahirZain <shahirzain100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4.4"
serde = "^1.0"
serde_derive = "1.0"
reqwest = "^0.9.19"
dotenv = "^0.14.1"
rocket_cors = "^0.5.2"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates","json"]